# react-native-mmfile

./: .gitignore  FAQ.md  LICENSE  NitroMmfile.podspec  README.md  nitro.json  package.json
.github/workflows/: test.yaml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/mmfile/: HybridMmfilePlatformContext.kt  NitroMmfilePackage.java
cpp/: AES.h  AES_arm.h  AES_intel.h  HybridMmfile.cpp  HybridMmfile.hpp  HybridMmfileFactory.cpp  HybridMmfileFactory.hpp  HybridMmfilePackage.cpp  HybridMmfilePackage.hpp  MMapEncryptedFile.h  MMapFile.cpp  MMapFile.h  MMapFileModuleHostObject.cpp  MMapFileModuleHostObject.h
cpp/tests/: AESTest.cpp  CMakeLists.txt  MMapEncryptedFileTest.cpp  MMapFileBench.cpp  MMapFileTest.cpp  benchmark_plot.gnuplot  benchmark_results.csv
docs/: API.md
docs/img/: rtn_benchmark_plot.gnuplot  rtn_benchmark_plot_ms.gnuplot  rtn_benchmark_results.csv  rtn_benchmark_results_ms.csv
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/nitrommfileexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Local.xcconfig  Podfile
example/ios/NitroMmfileExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroMmfileExample.xcodeproj/: project.pbxproj
example/ios/NitroMmfileExample.xcodeproj/xcshareddata/xcschemes/: NitroMmfileExample.xcscheme
example/ios/NitroMmfileExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
example/src/storages/: MMKV.ts  MMKVEncrypted.ts  Mmfile.ts  MmfileEncrypted.ts  ReactNativeFS.ts
ios/: Bridge.h  HybridMmfilePlatformContext.swift
src/: index.ts
src/specs/: Mmfile.nitro.ts  MmfileFactory.nitro.ts  MmfilePackage.nitro.ts  MmfilePlatformContext.nitro.ts
